tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/virtualservice/fault_abort_gRPC/proxyless-grpc/to_b/_test_context/VirtualService.3207776956.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-98059
spec:
  hosts:
  - b
  http:
  - fault:
      abort:
        grpcStatus: UNAVAILABLE
        percentage:
          value: 100
    route:
    - destination:
        host: b
